Resource leak related to gstreamer and videos https://bugs.webkit.org/show_bug.cgi?id=109350

Reviewed by Eric Carlson.

Since active DOM object are only stopped once and can not be restarted, we can
unreference the media player there, instead of waiting for garbage collection.

If the r152778 is rolled back, this also breaks a circular reference between
GStreamer and WebKit which prevented garbage collecting from triggering.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::stop):

Canonical link: https://commits.webkit.org/137627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153937 268f45cc-cd09-0410-ab3c-d52691b4dbfc